[gd_scene load_steps=11 format=3 uid="uid://c4l07cchjw5ds"]

[ext_resource type="Script" uid="uid://d14jhihlbqn54" path="res://Scripts/main_game.gd" id="1_kvfik"]
[ext_resource type="Texture2D" uid="uid://1poit00bwfuf" path="res://Assets/Background/GridBox.png" id="1_yprpe"]
[ext_resource type="Script" uid="uid://chl0tx843eaa1" path="res://Scripts/description.gd" id="2_321ql"]
[ext_resource type="Script" uid="uid://n01lp5yte1h6" path="res://Scripts/grid.gd" id="2_e3m3f"]
[ext_resource type="Texture2D" uid="uid://ivc2us38emgm" path="res://Assets/Background/DescriptionBox.png" id="2_ybmw1"]
[ext_resource type="PackedScene" uid="uid://bnhv6of7trmqx" path="res://Scenes/ItemMusic.tscn" id="3_ws5ob"]
[ext_resource type="AudioStream" uid="uid://cvjf0fybsc50n" path="res://Assets/Audio/main-bgm.mp3" id="6_d4f28"]
[ext_resource type="AudioStream" uid="uid://diwqdu871l2ii" path="res://Assets/Audio/merge.mp3" id="6_iuea6"]
[ext_resource type="AudioStream" uid="uid://bel3d0gpk3k8b" path="res://Assets/Audio/fail.mp3" id="9_3bmkb"]
[ext_resource type="AudioStream" uid="uid://ldv5oyge8njr" path="res://Assets/Audio/success.mp3" id="10_48eim"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_kvfik")

[node name="BackgroundImage" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="BackgroundImage"]
custom_minimum_size = Vector2(350, 360)
offset_right = 360.0
offset_bottom = 640.0
color = Color(0.4745098, 0.4392157, 0.43137255, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="BackgroundImage"]
visible = false
offset_left = -927.0
offset_top = 475.0
offset_right = 33.0
offset_bottom = 1015.0

[node name="TextureRect" type="TextureRect" parent="BackgroundImage/CenterContainer"]
layout_mode = 2

[node name="GridImage" type="TextureRect" parent="."]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_yprpe")

[node name="CompletedDeadline" type="Label" parent="."]
offset_left = 20.0
offset_top = 8.0
offset_right = 123.0
offset_bottom = 31.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Completed: 0"

[node name="FailedDeadline" type="Label" parent="."]
offset_left = 250.0
offset_top = 8.0
offset_right = 314.0
offset_bottom = 31.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Failed: 0"
horizontal_alignment = 2

[node name="Description" type="Node2D" parent="."]
script = ExtResource("2_321ql")

[node name="DescriptionBox" type="TextureRect" parent="Description"]
z_index = -1
offset_right = 360.0
offset_bottom = 640.0
texture = ExtResource("2_ybmw1")

[node name="DescriptionText" type="RichTextLabel" parent="Description/DescriptionBox"]
layout_mode = 0
offset_left = 11.0
offset_top = 578.0
offset_right = 348.0
offset_bottom = 632.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 12
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridFunction" type="Node2D" parent="."]
z_index = -1
script = ExtResource("2_e3m3f")
width = 6
height = 6
x_start = 36
y_start = 250
offset = 57

[node name="ItemMusic" parent="GridFunction" instance=ExtResource("3_ws5ob")]
visible = false
position = Vector2(25, 21)

[node name="MergeSound" type="AudioStreamPlayer2D" parent="GridFunction"]
stream = ExtResource("6_iuea6")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_d4f28")
autoplay = true

[node name="DeadlineScroll" type="ScrollContainer" parent="."]
clip_contents = false
offset_left = 2.0
offset_top = 118.0
offset_right = 350.0
offset_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeadlineContainer" type="HBoxContainer" parent="DeadlineScroll"]
custom_minimum_size = Vector2(340, 70)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 177

[node name="FailedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_3bmkb")

[node name="CompletedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_48eim")

[node name="EndingScreen" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="EndingScreen"]
custom_minimum_size = Vector2(350, 360)
offset_right = 360.0
offset_bottom = 640.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="EndingScreen"]
offset_left = 1.0
offset_top = 39.0
offset_right = 361.0
offset_bottom = 233.0

[node name="GameOver" type="Label" parent="EndingScreen/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"

[node name="FinalResult" type="CenterContainer" parent="EndingScreen"]
offset_left = 1.0
offset_top = 250.0
offset_right = 361.0
offset_bottom = 307.0

[node name="CompletedResult" type="Label" parent="EndingScreen/FinalResult"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Final Score: "

[node name="GameOverButtons" type="VBoxContainer" parent="EndingScreen"]
z_index = 1
y_sort_enabled = true
offset_left = 35.0
offset_top = 392.0
offset_right = 329.0
offset_bottom = 557.0

[node name="PlayAgain" type="Button" parent="EndingScreen/GameOverButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="ReturnToMain" type="Button" parent="EndingScreen/GameOverButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Return to Main Menu"

[connection signal="pressed" from="EndingScreen/GameOverButtons/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="EndingScreen/GameOverButtons/ReturnToMain" to="." method="_on_return_to_main_pressed"]
